// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card> Test should match snapshot and have classes 1`] = `
<div>
  <div
    bordercolor=""
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root sc-bczRLJ lftjCK size-auto css-bhp9pd-MuiPaper-root-MuiCard-root"
  />
</div>
`;

exports[`<Card> Test should match snapshot and have classes 2`] = `
<div>
  <div
    bordercolor=""
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root sc-bczRLJ lftjCK size-large css-bhp9pd-MuiPaper-root-MuiCard-root"
  />
</div>
`;

exports[`<Card> Test should match snapshot and have classes 3`] = `
<div>
  <div
    bordercolor=""
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root sc-bczRLJ lftjCK size-medium css-bhp9pd-MuiPaper-root-MuiCard-root"
  />
</div>
`;

exports[`<Card> Test should match snapshot and have classes 4`] = `
<div>
  <div
    bordercolor=""
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root sc-bczRLJ lftjCK size-small css-bhp9pd-MuiPaper-root-MuiCard-root"
  />
</div>
`;

exports[`<Card> Test should match snapshot and have gi 1`] = `
<div>
  <div
    bordercolor=""
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root sc-bczRLJ lftjCK size-auto css-bhp9pd-MuiPaper-root-MuiCard-root"
  />
</div>
`;

exports[`<Card> Test should match snapshot and have gi 2`] = `
<div>
  <div
    bordercolor=""
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root sc-bczRLJ lftjCK size-large css-bhp9pd-MuiPaper-root-MuiCard-root"
  />
</div>
`;

exports[`<Card> Test should match snapshot and have gi 3`] = `
<div>
  <div
    bordercolor=""
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root sc-bczRLJ lftjCK size-medium css-bhp9pd-MuiPaper-root-MuiCard-root"
  />
</div>
`;

exports[`<Card> Test should match snapshot and have gi 4`] = `
<div>
  <div
    bordercolor=""
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root sc-bczRLJ lftjCK size-small css-bhp9pd-MuiPaper-root-MuiCard-root"
  />
</div>
`;

exports[`<Card> Test should match snapshot and have given classes 1`] = `
<div>
  <div
    bordercolor=""
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root sc-bczRLJ lftjCK size-auto css-bhp9pd-MuiPaper-root-MuiCard-root"
  />
</div>
`;

exports[`<Card> Test should match snapshot and have given classes 2`] = `
<div>
  <div
    bordercolor=""
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root sc-bczRLJ lftjCK size-large css-bhp9pd-MuiPaper-root-MuiCard-root"
  />
</div>
`;

exports[`<Card> Test should match snapshot and have given classes 3`] = `
<div>
  <div
    bordercolor=""
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root sc-bczRLJ lftjCK size-medium css-bhp9pd-MuiPaper-root-MuiCard-root"
  />
</div>
`;

exports[`<Card> Test should match snapshot and have given classes 4`] = `
<div>
  <div
    bordercolor=""
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root sc-bczRLJ lftjCK size-small css-bhp9pd-MuiPaper-root-MuiCard-root"
  />
</div>
`;
